<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Huaxin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Welcome!</string>
    <string name="title_activity_list">Huaxin</string>
    
    <string name="title_search">BÚSQUEDA</string>
    <string name="title_whatyousearch">¿QUÉ BUSCAS?</string>
    <string name="title_description">DESCRIPCION</string>
    <string name="title_category">CATEGORÍA</string>
    <string name="title_location">UBICACIÓN</string>
    
    <string name="search_keywords">Introduce tu búsuqeda</string>
    
    <string name="btn_search">Buscar</string>
    <string name="btn_new_ad">Publicar anuncio</string>
    
    <string name="descr_logo">HUAXIN Logo</string>
    <string name="descr_publi">HUAXIN Publi</string>
    <string name="descr_img">ITEM Image</string>
    
    <string name="loading">Cargando…</string>
    <string name="anuncios">anuncios</string>
    <string name="username">Username</string>
    <string name="new_search">Nueva Búsqueda</string>
    <string name="favorites">Favoritos</string>
    <string name="my_ads">Mis Anuncios</string>
    <string name="buy_credits">Comprar Créditos</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    
    <string name="share_via">Share via</string>
    <string name="share_subject">Anuncio en HUAXIN</string>
    

</resources>
