<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layout_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" >

            <ImageView android:id="@+id/img_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descr_logo"
                android:layout_gravity="center"
                android:minHeight="40dp"
                android:maxHeight="80dp"
                android:scaleType="fitXY"
                android:src="@drawable/logo" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView android:id="@+id/txt_item_price"
                    style="@style/blue_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="2000€" />

                <Button
                    android:id="@+id/btn_call"
                    android:layout_width="@dimen/icon"
                    android:layout_height="@dimen/icon"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_phone"
                    android:layout_marginRight="100dp" />

                <Button
                    android:id="@+id/btn_fav"
                    android:layout_width="@dimen/icon"
                    android:layout_height="@dimen/icon"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_star_off"
                    android:layout_marginRight="50dp"/>

                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="@dimen/icon"
                    android:layout_height="@dimen/icon"
                    android:background="@drawable/ic_share"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <TextView
                style="@style/black_title"
                android:text="@string/title_category" />

            <TextView android:id="@+id/txt_item_category"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_category" />
            
            <TextView
                style="@style/black_title"
                android:text="@string/title_location" />

            <TextView android:id="@+id/txt_item_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_location" />

            <TextView
                style="@style/black_title"
                android:text="@string/title_description" />

            <TextView android:id="@+id/txt_item_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_description" />
        </LinearLayout>
    </ScrollView>

    <com.devspark.sidenavigation.SideNavigationView
        android:id="@+id/side_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
    </com.devspark.sidenavigation.SideNavigationView>

</RelativeLayout>